Add change history for pull requests
This commits tracks the changes of a pull request and shows the
 history within its own tab on the pull request details page.

Changes by third party systems like ci status sent from jenkins
are not tracked for now.

Co-authored-by: René Pfeuffer<rene.pfeuffer@cloudogu.com>